# ageo-atoms

./: .gitignore  AGENTS.md  AUDIT_EXECUTION_PLAN.md  AUDIT_INGEST.md  AUDIT_PHASE1_PHASE2_PLAN.md  AUDIT_PHASE3_PLAN.md  AUDIT_PHASE4_PLAN.md  AUDIT_PHASE5_PLAN.md  AUDIT_PHASE6_PLAN.md  AUDIT_PHASE7_PLAN.md  AUDIT_TOOL_IMPLEMENTATION.md  FUTURE_INGESTER.md  FUTURE_UPSTREAM.md  HANDOFF_PROVENANCE_PLAN.md  HYPERPARAMS.md  INGESTER_FINAL_COVERAGE_AUDIT.md  INGESTER_GAP_CLOSURE_EXECUTION_PLAN.md  INGESTER_GAP_PHASE1_PLAN.md  INGESTER_GAP_PHASE2_PLAN.md  INGESTER_GAP_PHASE3_PLAN.md  INGESTER_GAP_PHASE4_PLAN.md  INGESTER_GAP_PHASE5_PLAN.md  INGESTER_HARDENING_EXECUTION_PLAN.md  INGESTER_LESSON_CROSSWALK.md  INGESTER_PHASE1_PLAN.md  INGESTER_PHASE2_PLAN.md  INGESTER_PHASE3_PLAN.md  INGESTER_PHASE3_REMAINDER_PLAN.md  INGESTER_PHASE4_PLAN.md  INGESTER_PHASE5_PLAN.md  INGESTER_RISK_LESSONS_AUDIT.md  INGESTER_ROLLOUT_PLAN.md  INGESTER_ROLLOUT_WORKSTREAM2_PLAN.md  INGESTER_ROLLOUT_WORKSTREAM3_PLAN.md  INGESTION.md  INGEST_PROMPT.md  INTEREST.md  ISSUES.md  PENDING.md  README.md  (+16 more)
ageoa/: __init__.py  references.json  tempo.py  tempo_cdg.json  tempo_witnesses.py
data/: audit_manifest.json  audit_scores.csv
prompts/: dejargonize_docstrings.md
scripts/: add_reference.py  apply_audit_reviews.py  atom_manifest.yml  audit.py  audit_acceptability.py  audit_generated_nouns.py  audit_references.py  audit_return_fidelity.py  audit_risk.py  audit_runtime_probes.py  audit_semantics.py  audit_signature_fidelity.py  audit_state_fidelity.py  audit_structural.py  batch_ingest.sh  batch_retry.sh  (+26 more)
(+3041 files in other folders)
