[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ageoa"
version = "0.1.0"
description = "High-level verified atoms for AGEO-Matcher"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "icontract>=2.6",
    "numpy>=1.24",
]

[tool.hatch.build.targets.wheel]
packages = ["ageoa"]
